--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <!-- Cabeçalho -->
 <header class="text-center">
   <div class="container">
-    <img src="img/logo-footer.png" alt="Logo InfinitCast" style="height:200px; margin-bottom:0;">
+    <img src="logo-footer.png" alt="Logo InfinitCast" style="height:200px; margin-bottom:0;">
     <h2 class="category-title" style="margin-top: -10px; margin-bottom: 10px; font-size:1.4rem;">
       <i class="bi bi-controller"></i>🔥 SUA LOJA CONFIÁVEL DE APKs FREE PARA ANDROID 📲✅
     </h2>
@@ -119,14 +119,14 @@
           <img src="img/gl.png" class="app-icon mx-auto" alt="Game 1">
           <h4>CurrículoFácil </h4>
           <p>📄Crie seu currículo profissional em minutos!Com modelo pronto, visual moderno e envio fácil por PDF.</p>
-          <a href="app1.apk" class="btn btn-download">📥 Baixar APK</a>
+          <a href="https://drive.google.com/uc?export=download&id=1hxZ7_MF-ipy5oIFcn3xhfT97W1SPCJN_" class="btn btn-download">📥 Baixar APK</a>
         </div>
       </div>
 
       <!-- App 2 -->
       <div class="col-md-4 mb-4 game-card">
         <div class="card text-center p-3">
-          <img src="img/E.png" class="app-icon mx-auto" alt="Game 2">
+          <img src="E.png" class="app-icon mx-auto" alt="Game 2">
           <h4>Quiz Biblíco</h4>
           <p>Teste seus conhecimentos sobre a Palavra de Deus! Desafie sua mente com perguntas e respostas da Bíblia.</p>
           <a href="app2.apk" class="btn btn-download">📥 Baixar APK</a>
@@ -136,7 +136,7 @@
       <!-- App 3 -->
       <div class="col-md-4 mb-4 game-card">
         <div class="card text-center p-3">
-          <img src="img/plus.png" class="app-icon mx-auto" alt="Game 3">
+          <img src="plus.png" class="app-icon mx-auto" alt="Game 3">
           <h4>Game 3</h4>
           <p>Alta performance para gamers exigentes</p>
           <a href="app3.apk" class="btn btn-download">📥 Baixar APK</a>
@@ -164,7 +164,7 @@
     <div class="row align-items-end">
       <!-- Esquerda -->
       <div class="col-md-6 d-flex align-items-center text-left">
-        <img src="img/logo-footer.png" alt="Logo InfinitCast" style="height:60px; margin-right:0px;">
+        <img src="logo-footer.png" alt="Logo InfinitCast" style="height:60px; margin-right:0px;">
         <small>
           InfinitCast é sua loja digital de APKs confiável e atualizada, oferecendo os melhores aplicativos para Android com segurança, rapidez e fácil acesso. Baixe e aproveite as últimas versões com total praticidade.
         </small>
