--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img src="E.png" class="app-icon mx-auto" alt="Game 2">
           <h4>Quiz Biblíco</h4>
           <p>Teste seus conhecimentos sobre a Palavra de Deus! Desafie sua mente com perguntas e respostas da Bíblia.</p>
-          <a href="app2.apk" class="btn btn-download">📥 Baixar APK</a>
+          <a href="https://drive.google.com/uc?export=download&id=1os1uON6U_OgjugrwLd06p3Tgb6geXe77" class="btn btn-download">📥 Baixar APK</a>
         </div>
       </div>
 
