--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <!-- CurrículoFácil -->
       <div class="col-md-4 mb-4 game-card">
         <div class="card text-center p-3">
-          <img src="img/gl.png" class="app-icon mx-auto" alt="Game 1">
+          <img src="gl.png" class="app-icon mx-auto" alt="Game 1">
           <h4>CurrículoFácil </h4>
           <p>📄Crie seu currículo profissional em minutos!Com modelo pronto, visual moderno e envio fácil por PDF.</p>
           <a href="https://drive.google.com/uc?export=download&id=1hxZ7_MF-ipy5oIFcn3xhfT97W1SPCJN_" class="btn btn-download">📥 Baixar APK</a>
